--- a/src/sass/_invite.scss
+++ b/src/sass/_invite.scss
@@ -40,3 +40,40 @@
     padding-right:10px;
     z-index: 2;
 }
+.btnAnim{
+    color: rgba(0, 0, 0, 0.5);
+    top: -60%;
+    right: -40%;
+    transition: 0.5s color;
+    position: relative;
+}
+.inviteBtn{
+
+    font-size: 30px;
+    font-weight: bold;
+
+    cursor: pointer;
+    &:hover{
+
+       color: rgba(0,0,0,0.9);
+    }
+    &:after { content:'';
+    position: absolute;
+    left:50%;
+    right:50%;
+    bottom:0;
+    height:2px;
+    background: #000;
+    transition: 0.5s all;
+    }
+    &:hover:after {
+        left:5px;
+        right:5px;
+    }
+
+}
+@media print {
+    .example-screen {
+        display: none;
+    }
+ }
