--- a/mock-ups/scss/_form.scss
+++ b/mock-ups/scss/_form.scss
@@ -6,54 +6,51 @@
   font-style: normal;
 
 }
+
 label{
   display: none;
 }
-#dataInsert{
-  height: 60%;
-  width: 40%;
-  opacity: .8;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+
+div{
+  margin-top: 25px;
+}
+#calendar{
+  font-size: 25px;
+  margin-bottom: -25px;
+
+}
+
+span{
+  color: white;
   text-align: center;
+}
 
-  div{
-    margin-top: 25px;
+input{
+  width: 500px;
+  border: none;
+  border-radius: 30%;
+  font-size:30px;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+  line-height: 2em;
+  cursor: pointer;
+  font-family: 'eraserregular';
+  &:hover{
+    transform: scale(1.1)
   }
-  span{
-    color: white;
-    text-align: center;
-  }
-  input{
-    width: 500px;
-    border: none;
-    border-radius: 30%;
-    font-size:30px;
+  &:focus{
     background-color: transparent;
-    color: white;
-    text-align: center;
-    line-height: 2em;
-    cursor: pointer;
-    font-family: 'eraserregular';
-    &:hover{
-      transform: scale(1.1)
-    }
-    &:focus{
-      background-color: transparent;
-    }
-    &::placeholder{
-      color: white;
-      font-family: 'eraserregular';
-      font-size: 40px;
-    }
-    &:active{
-      font-family: 'eraserregular';
-    }
   }
-
-
+  &::placeholder{
+    color: white;
+    font-family: 'eraserregular';
+    font-size: 40px;
+  }
+  &:active{
+    font-family: 'eraserregular';
+  }
 }
 #date{
   margin-left:10px;
