--- a/src/sass/_invite.scss
+++ b/src/sass/_invite.scss
@@ -15,37 +15,91 @@
     font-style: normal;
 
 }
-
-#inviteCard{
-
-    height: 100vh;
+#displInvSite{
     width: 100vw;
+    height: 100vh;
+}
 
+#weddingCard1{
+    padding-top: 160px;
+    max-height: 100vh;
+    max-width: 100vw;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    #invNames{
+        font-family: 'reeyregular';
+        font-size: 90px;
+        color: red;
+        margin-bottom:30px;
+        z-index: 1;
+        transform: rotate(-7deg);
+    }
+    #invPart1{
+        text-transform: uppercase;
+        margin-top: 30px;
+        font-size: 30px;
+        text-align: center;
+        z-index: 2;
+    }
+    #invPart2{
+        text-transform: uppercase;
+        margin-top: 145px;
+        font-size: 30px;
+        text-align: center;
+        z-index: 2;
+    }
+    #invited{
+        position: relative;
+        font-size: 70px;
+        font-weight: 700;
+        top: -195px;
+        border-bottom: 1px solid black;
+      
+    }
 
+    #place{
+        font-size: 27px;
+        border-bottom: 1px solid;
+        margin-top: -60px;
+        font-weight: 600
+      }
+      #when{
+        font-size: 30px;
+        border-bottom: 1px double black;
+        position: relative;
+        text-transform: uppercase;
+        margin-top: 25px;
+        left:110px;
+        font-weight: 600
+      }
+      #hour{
+        font-size: 39px;
+        border-bottom: 1px double black;
+        position: relative;
+        text-transform: uppercase;
+        margin-top: -45px;
+        right: 155px;
+        font-weight: 600
+      }
+      #monthDay{
+        display: none;
+      }
 }
-#invNames{
-    font-family: 'reeyregular';
-    font-size: 90px;
-    color: red;
-    margin-bottom:30px;
-    transform: rotate(-5deg);
-}
-#invInformation{
-    width: 600px;
-    padding-right:10px;
-    z-index: 2;
-}
+
+
+
+
+
+
 .btnAnim{
     color: rgba(0, 0, 0, 0.5);
-    top: -60%;
-    right: -40%;
+    top: 5%;
+    right: 5%;
     transition: 0.5s color;
-    position: relative;
+    position: absolute;
 }
 .inviteBtn{
 
