--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -35,7 +35,7 @@
 }
 
 .full-page {
-  background-image: url("../images/backgroudFirstSite.jpg");
+  background-image: url("../../images/backgroudFirstSite.jpg");
   background-position: center;
   background-size: cover;
   height: 100vh;
