--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'eraserregular';
-  src: url('../fonts/Eraser/eraserregular.woff2') format('woff2'),
-       url('../fonts/Eraser/eraserregular.woff') format('woff');
+  src: url('./fonts/Eraser/eraserregular.woff2') format('woff2'),
+       url('./fonts/Eraser/eraserregular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: 'eraserregular';
-  src: url('../fonts/Eraser/eraserregular.woff2') format('woff2'),
-       url('../fonts/Eraser/eraserregular.woff') format('woff');
+  src: url('./fonts/Eraser/eraserregular.woff2') format('woff2'),
+       url('./fonts/Eraser/eraserregular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: 'reeyregular';
-  src: url('../fonts/reey/reey-regular.woff2') format('woff2'),
-       url('../fonts/reey/reey-regular.woff') format('woff');
+  src: url('./fonts/reey/reey-regular.woff2') format('woff2'),
+       url('./fonts/reey/reey-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -35,7 +35,7 @@
 }
 
 .full-page {
-  background-image: url("../../images/backgroudFirstSite.jpg");
+  background-image: url("./images/backgroudFirstSite.jpg");
   background-position: center;
   background-size: cover;
   height: 100vh;
